[gd_scene load_steps=2 format=3 uid="uid://d0wj2eydjqqr8"]

[ext_resource type="Script" path="res://gui/new_layer_dialog.gd" id="1_cj3nx"]

[node name="NewLayerDialog" type="AcceptDialog"]
title = "New layer"
initial_position = 2
size = Vector2i(380, 160)
ok_button_text = "Create"
dialog_hide_on_ok = false
dialog_close_on_escape = false
script = ExtResource("1_cj3nx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Layer name"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Layer fill color"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Transparency"
popup/item_1/id = 1
popup/item_2/text = "Black"
popup/item_2/id = 2
popup/item_3/text = "White"
popup/item_3/id = 3
popup/item_4/text = "Foreground color"
popup/item_4/id = 4
popup/item_5/text = "Background color"
popup/item_5/id = 5
popup/item_6/text = "Custom"
popup/item_6/id = 6

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
